--- a/RemTool/ClientApp/angular.json
+++ b/RemTool/ClientApp/angular.json
@@ -1,7 +1,7 @@
 {
   "version": 1,
   "projects": {
-    "helloangularapp": {
+    "RemTool": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
