добавил строку подключения в appsettings.json, подключил конфигурацию приложения в Startup

--- a/RemTool/appsettings.json
+++ b/RemTool/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "MS_SQL_Server_Express": "Data Source=DESKTOP-I5UAL1I\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
