отредактировал startup, удалил старый контект, упростил строку подключения

--- a/RemTool/appsettings.json
+++ b/RemTool/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MS_SQL_Server_Express": "Data Source=DESKTOP-I5UAL1I\\SQLEXPRESS;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "MS_SQL_Server_Express": "Data Source=DESKTOP-I5UAL1I\\SQLEXPRESS;Database=RemTool;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
