--- a/RemTool/RemTool.csproj
+++ b/RemTool/RemTool.csproj
@@ -15,6 +15,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Bson" Version="2.11.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.11.2" />
+    <PackageReference Include="MongoDB.Driver.GridFS" Version="2.11.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DAL\Context\MongoDB\" />
   </ItemGroup>
 
 </Project>
