--- a/RemTool/appsettings.json
+++ b/RemTool/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "RemToolMongoDBsettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "RemTool"
+  },
   "ConnectionStrings": {
     "MS_SQL_Server_Express": "Data Source=DESKTOP-I5UAL1I\\SQLEXPRESS;Database=RemTool;Trusted_Connection=True;"
   },
