--- a/RemTool/ClientApp/tsconfig.json
+++ b/RemTool/ClientApp/tsconfig.json
@@ -1,36 +1,20 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
-
   "compilerOptions": {
     "baseUrl": "./",
-    //"noImplicitAny": false,
-    //"noEmitOnError": true,
-    //"removeComments": false,
+    "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "target": "ES2015",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "es2015",
+    "module": "es2020",
     "lib": [
-      "ES2018",
-      "DOM"
+      "es2018",
+      "dom"
     ]
-  },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ],
-  
-  "exclude": [
-    "node_modules",
-    "wwwroot"
-  ]
+  }
 }
