--- a/RemTool/RemTool.csproj
+++ b/RemTool/RemTool.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="DAL\Context\MongoDB\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
