добавил возможность добавлять бренды при добавлении инструмента

--- a/RemTool/RemTool.csproj
+++ b/RemTool/RemTool.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="DAL\Context\MongoDB\" />
+    <Folder Include="Models\DTO\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
