--- a/RemTool/RemTool.csproj
+++ b/RemTool/RemTool.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.2" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.11.2" />
     <PackageReference Include="MongoDB.Driver.GridFS" Version="2.11.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
