--- a/RemTool/ClientApp/package.json
+++ b/RemTool/ClientApp/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "ngx-quill": "^12.0.1",
     "ngx-swiper-wrapper": "^10.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "swiper": "^6.3.4",
     "tslib": "^2.0.0",
