добавил отправку почты при запросе

--- a/RemTool/appsettings.json
+++ b/RemTool/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "MailSendSettings": {
+    "Host": "smtp.mail.ru",
+    "Port": "465",
+    "Credentials_Name": "__________@____",
+    "Credentials_Pass": "___________"
+  },
   "RemToolMongoDBsettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "RemTool"
