добавил try_catch в отправку почты, почта отправляется не отправителю а админу - поле админа в Mvh

--- a/RemTool/appsettings.json
+++ b/RemTool/appsettings.json
@@ -3,7 +3,8 @@
     "Host": "smtp.mail.ru",
     "Port": "465",
     "Credentials_Name": "__________@____",
-    "Credentials_Pass": "___________"
+    "Credentials_Pass": "___________",
+    "Mvh_Name": "_________@___"
   },
   "RemToolMongoDBsettings": {
     "ConnectionString": "mongodb://localhost:27017",
