--- a/RemTool/ClientApp/package.json
+++ b/RemTool/ClientApp/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "classlist.js": "^1.1.20150312",
     "ngx-quill": "^12.0.1",
     "ngx-swiper-wrapper": "^10.0.0",
     "quill": "^1.3.7",
